--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,13 +1,28 @@
-#login-container{
-    display: block;
-    margin: auto;
-    margin-top: 50px;
-    max-width: 600px;
-    padding: 10px 30px 30px 30px;
-    background-color: #EBEFF2; 
-    border-radius: 1%;
-    background: #465A65;
-    text-align: center;
+body{
+    background-color: #EBEFF2;
+    background-image: url(../media/background.png);
+    -webkit-animation: animatedBackground 15s linear infinite;
+	animation: animatedBackground 15s linear infinite;
+}
+
+@keyframes animatedBackground {
+	from { background-position: 0 0 }
+	to { background-position: 383px 230px; }
+}
+
+/* #background-particles{
+    z-index: -1;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+} */
+
+#login-header{
+    background-color: #465A65;
+    padding: 10px;
+    box-shadow: 0px -1px 9px 2px;
 }
 
 #logo{
@@ -16,24 +31,46 @@
     margin-bottom: 7px;
 }
 
+#login-container{
+    /* display: block; */
+    margin: auto;
+    margin-top: 80px;
+    /* margin-top: 50px; */
+    max-width: 600px;
+    padding: 30px 0px 0px 0px;
+    background-color: #EBEFF2; 
+    background: #465A65;
+    text-align: center;
+    box-shadow: 0px 33px 48px -26px;
+}
+
 #login-button{
+    width: 100%;
     margin: auto;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 0;
     font-family: "BN-titling", Fallback, sans-serif;
     font-size: 40px;
     background-color: #333947;
     color: white;
-    border-style: solid;
-    border-color: white;
     text-align: center;
-    border-radius: 5%;
     box-shadow: 0px 0px 1px 0px;
+    color: white;
+    border-top-style: none;
+    border-bottom-style: none;
+    border-right-style: none;
+    border-left-style: none;
+}
+
+#login-button:hover{
+    width: 100%;
+    background-color: #b8b8b8;
 }
 
 .apiKeys{
     font-size: 40px;
     font-family: "BN-titling", Fallback, sans-serif;
+    text-align: center;
 }
 
 
