--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,4 +1,4 @@
-body{
+/* body{
     background-color: #EBEFF2;
     background-image: url(../media/background.png);
     -webkit-animation: animatedBackground 15s linear infinite;
@@ -7,16 +7,7 @@ body{
 
 @keyframes animatedBackground {
 	from { background-position: 0 0 }
-	to { background-position: 383px 230px; }
-}
-
-/* #background-particles{
-    z-index: -1;
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
+	to { background-position: 293px 338px; }
 } */
 
 #login-header{
@@ -29,12 +20,14 @@ body{
     display: block;
     margin: auto;
     margin-bottom: 7px;
+    user-select: none;
 }
 
 #login-container{
     /* display: block; */
     margin: auto;
     margin-top: 80px;
+    position: relative;
     /* margin-top: 50px; */
     max-width: 600px;
     padding: 30px 0px 0px 0px;
@@ -42,6 +35,20 @@ body{
     background: #465A65;
     text-align: center;
     box-shadow: 0px 33px 48px -26px;
+}
+
+#login-help-button{
+    position: absolute;
+    top: 4px;
+    right: 7px;
+    font-size: 18px;
+    width: 25px;
+    outline: none;
+    user-select: none;
+}
+
+#login-help-button:hover{
+    cursor: pointer;
 }
 
 #login-button{
@@ -52,6 +59,7 @@ body{
     font-family: "BN-titling", Fallback, sans-serif;
     font-size: 40px;
     background-color: #333947;
+    user-select: none;
     color: white;
     text-align: center;
     box-shadow: 0px 0px 1px 0px;
